--- a/frontend/src/assets/css/buttonLoginGoogle.css
+++ b/frontend/src/assets/css/buttonLoginGoogle.css
@@ -21,19 +21,19 @@
   pointer-events: none;
 }  
   /* Default button */
-.default {
+.google-login-button-default {
     background-color: var(--background-color);
     border: 1px solid var(--black-color);
 }
 
   /* Hover button */
-.hover {
+.google-login-button-hover {
     background-color: var(--background-color);
     border: 1px solid var(--link-color);
 }
   
   /* Focus button */
-.focus {
+.google-login-button-focus {
   background-color: var(--white-color);
   border: 1px solid var(--black-color);
 }
